ui, sign-on: Dont set quiz name at the time of hosted session creation
This means the sign-on service wont have to write to Redis any more.
Now the name will be set at the same time as the quiz is being
configured.
